--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@capacitor/android": "^5.7.0",
     "@capacitor/core": "^5.7.0",
+    "@capacitor/screen-orientation": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
     "@google/generative-ai": "^0.24.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
