--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "background_color": "#f8fafc",
   "theme_color": "#5DADE2",
-  "orientation": "portrait",
+  "orientation": "landscape",
   "icons": [
     {
       "src": "https://cdn.jsdelivr.net/npm/lucide-static@0.344.0/icons/anchor.svg",
