--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Setup Capacitor Android
         run: |
-          npm install @capacitor/android
+          npm install @capacitor/core @capacitor/cli @capacitor/android
           npx cap add android
           npx cap sync
 
