--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -38,6 +38,17 @@ jobs:
           npx cap add android
           npx cap sync
 
+      - name: Fix Kotlin Dependency Conflicts
+        run: |
+          echo "" >> android/app/build.gradle
+          echo "configurations.all {" >> android/app/build.gradle
+          echo "    resolutionStrategy {" >> android/app/build.gradle
+          echo "        force 'org.jetbrains.kotlin:kotlin-stdlib:1.9.10'" >> android/app/build.gradle
+          echo "        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.10'" >> android/app/build.gradle
+          echo "        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.10'" >> android/app/build.gradle
+          echo "    }" >> android/app/build.gradle
+          echo "}" >> android/app/build.gradle
+
       - name: Build Debug APK
         run: |
           cd android
