Edit:添加修改,打包安卓

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -12,6 +12,13 @@
     "StatusBar": {
       "style": "DARK",
       "overlaysWebView": true
+    },
+    "Geolocation": {
+      "permissions": {
+        "android": {
+          "location": "always"
+        }
+      }
     }
   }
 }
