--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^8.0.0",
+    "@capacitor/geolocation": "^8.0.0",
     "@google/genai": "^1.31.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "lucide-react": "^0.555.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "lucide-react": "^0.555.0",
-    "vite": "^7.2.7",
-    "@vitejs/plugin-react": "^5.1.2"
+    "vite": "^7.2.7"
   },
   "devDependencies": {
+    "@capacitor/cli": "^7.4.4",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
