--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@capacitor/android": "^8.0.0",
     "@capacitor/geolocation": "^8.0.0",
+    "@capacitor/ios": "^8.0.0",
     "@google/genai": "^1.31.0",
     "@vitejs/plugin-react": "^5.1.2",
     "lucide-react": "^0.555.0",
@@ -22,6 +23,9 @@
     "@capacitor/cli": "^7.4.4",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
